@@ -1,23 +1,13 @@
 package com.sprintProject.orderinventoryapplication.testservice;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.Optional;
+import java.util.*;
 
-import com.sprintProject.orderinventoryapplication.customexception.InventoryNotFoundException;
-import com.sprintProject.orderinventoryapplication.customexception.ProductNotFoundException;
-import com.sprintProject.orderinventoryapplication.customexception.StoreNotFoundException;
-import com.sprintProject.orderinventoryapplication.entity.Inventory;
-import com.sprintProject.orderinventoryapplication.entity.Products;
-import com.sprintProject.orderinventoryapplication.entity.Stores;
-import com.sprintProject.orderinventoryapplication.repository.InventoryRepository;
-import com.sprintProject.orderinventoryapplication.repository.ProductsRepository;
-import com.sprintProject.orderinventoryapplication.repository.StoresRepository;
+import com.sprintProject.orderinventoryapplication.customexception.*;
+import com.sprintProject.orderinventoryapplication.entity.*;
+import com.sprintProject.orderinventoryapplication.repository.*;
 import com.sprintProject.orderinventoryapplication.service.InventoryService;
 import com.sprintProject.orderinventoryapplication.dto.requestDto.InventoryRequestDto;
 import com.sprintProject.orderinventoryapplication.dto.responseDto.InventoryResponseDto;
@@ -30,7 +20,7 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 @ExtendWith(MockitoExtension.class)
- class InventoryTest {
+class InventoryTest {
 
     @Mock
     private InventoryRepository inventoryRepository;
@@ -52,7 +42,10 @@ import org.mockito.junit.jupiter.MockitoExtension;
     @BeforeEach
     void setUp() {
         store = new Stores();
+        store.setStoreId(1);
+
         product = new Products();
+        product.setProductId(1);
 
         inventory = new Inventory();
         inventory.setInventoryId(1);
@@ -64,55 +57,87 @@ import org.mockito.junit.jupiter.MockitoExtension;
         requestDto.setProductInventory(200);
     }
 
-    // 1 Positive
+    // =====================================================
+    // ✅ POSITIVE TEST CASES
+    // =====================================================
+
     @Test
     void testGetAllInventory() {
-        when(inventoryRepository.findAll()).thenReturn(Arrays.asList(inventory));
-
+        when(inventoryRepository.findAll()).thenReturn(List.of(inventory));
         assertEquals(1, inventoryService.getAllInventory().size());
     }
 
-    // 2 Positive
-    @Test
-    void testGetAllInventoryEmpty() {
-        when(inventoryRepository.findAll()).thenReturn(Collections.emptyList());
-
-        assertEquals(0, inventoryService.getAllInventory().size());
-    }
-
-    // 3 Positive
     @Test
     void testGetInventoryById() {
         when(inventoryRepository.findById(1)).thenReturn(Optional.of(inventory));
-
         InventoryResponseDto dto = inventoryService.getInventoryById(1);
-
         assertEquals(1, dto.getInventoryId());
     }
 
-    // 4 Negative
-    @Test
-    void testGetInventoryByIdNotFound() {
-        when(inventoryRepository.findById(1)).thenReturn(Optional.empty());
-
-        assertThrows(InventoryNotFoundException.class,
-                () -> inventoryService.getInventoryById(1));
-    }
-
-    // 5 Positive
     @Test
     void testCreateInventory() {
         when(storesRepository.findById(1)).thenReturn(Optional.of(store));
         when(productsRepository.findById(1)).thenReturn(Optional.of(product));
-        when(inventoryRepository.save(any(Inventory.class))).thenReturn(inventory);
+        when(inventoryRepository.findByStoresStoreId(1)).thenReturn(new ArrayList<>());
+        when(inventoryRepository.save(any())).thenReturn(inventory);
 
-        InventoryResponseDto dto =
-                inventoryService.createInventory(1, 1, requestDto);
-
+        InventoryResponseDto dto = inventoryService.createInventory(1, 1, requestDto);
         assertNotNull(dto);
     }
 
-    // 6 Negative
+    @Test
+    void testUpdateInventory() {
+        when(inventoryRepository.findById(1)).thenReturn(Optional.of(inventory));
+        when(storesRepository.findById(1)).thenReturn(Optional.of(store));
+        when(productsRepository.findById(1)).thenReturn(Optional.of(product));
+        when(inventoryRepository.save(any())).thenReturn(inventory);
+
+        InventoryResponseDto dto = inventoryService.updateInventory(1, 1, 1, requestDto);
+        assertNotNull(dto);
+    }
+
+    @Test
+    void testDeleteInventory() {
+        when(inventoryRepository.findById(1)).thenReturn(Optional.of(inventory));
+        String msg = inventoryService.deleteInventory(1);
+        assertEquals("Inventory deleted successfully with id : 1", msg);
+    }
+
+    @Test
+    void testGetInventoryByStore() {
+        when(storesRepository.findById(1)).thenReturn(Optional.of(store));
+        when(inventoryRepository.findByStoresStoreId(1)).thenReturn(List.of(inventory));
+
+        assertFalse(inventoryService.getInventoryByStore(1).isEmpty());
+    }
+
+    @Test
+    void testGetInventoryByProduct() {
+        when(productsRepository.findById(1)).thenReturn(Optional.of(product));
+        when(inventoryRepository.findByProductsProductId(1)).thenReturn(List.of(inventory));
+
+        assertFalse(inventoryService.getInventoryByProduct(1).isEmpty());
+    }
+
+    // =====================================================
+    // ❌ NEGATIVE TEST CASES
+    // =====================================================
+
+    @Test
+    void testGetInventoryByIdNotFound() {
+        when(inventoryRepository.findById(1)).thenReturn(Optional.empty());
+        assertThrows(InventoryNotFoundException.class,
+                () -> inventoryService.getInventoryById(1));
+    }
+
+    @Test
+    void testCreateInventoryNegativeStock() {
+        requestDto.setProductInventory(-10);
+
+        assertThrows(InvalidDataException.class,
+                () -> inventoryService.createInventory(1, 1, requestDto));
+    }
+
     @Test
     void testCreateInventoryStoreNotFound() {
         when(storesRepository.findById(1)).thenReturn(Optional.empty());
@@ -121,7 +146,6 @@ import org.mockito.junit.jupiter.MockitoExtension;
                 () -> inventoryService.createInventory(1, 1, requestDto));
     }
 
-    // 7 Negative
     @Test
     void testCreateInventoryProductNotFound() {
         when(storesRepository.findById(1)).thenReturn(Optional.of(store));
@@ -131,21 +155,19 @@ import org.mockito.junit.jupiter.MockitoExtension;
                 () -> inventoryService.createInventory(1, 1, requestDto));
     }
 
-    // 8 Positive
     @Test
-    void testUpdateInventory() {
-        when(inventoryRepository.findById(1)).thenReturn(Optional.of(inventory));
+    void testCreateInventoryDuplicate() {
+        Inventory existing = new Inventory();
+        existing.setProducts(product);
+
         when(storesRepository.findById(1)).thenReturn(Optional.of(store));
         when(productsRepository.findById(1)).thenReturn(Optional.of(product));
-        when(inventoryRepository.save(any(Inventory.class))).thenReturn(inventory);
+        when(inventoryRepository.findByStoresStoreId(1)).thenReturn(List.of(existing));
 
-        InventoryResponseDto dto =
-                inventoryService.updateInventory(1, 1, 1, requestDto);
-
-        assertNotNull(dto);
+        assertThrows(InvalidDataException.class,
+                () -> inventoryService.createInventory(1, 1, requestDto));
     }
 
-    // 9 Negative
     @Test
     void testUpdateInventoryNotFound() {
         when(inventoryRepository.findById(1)).thenReturn(Optional.empty());
@@ -154,38 +176,14 @@ import org.mockito.junit.jupiter.MockitoExtension;
                 () -> inventoryService.updateInventory(1, 1, 1, requestDto));
     }
 
-    // 10 Negative
     @Test
-    void testUpdateInventoryStoreNotFound() {
-        when(inventoryRepository.findById(1)).thenReturn(Optional.of(inventory));
-        when(storesRepository.findById(1)).thenReturn(Optional.empty());
+    void testUpdateInventoryNegativeStock() {
+        requestDto.setProductInventory(-5);
 
-        assertThrows(StoreNotFoundException.class,
+        assertThrows(InvalidDataException.class,
                 () -> inventoryService.updateInventory(1, 1, 1, requestDto));
     }
 
-    // 11 Negative
-    @Test
-    void testUpdateInventoryProductNotFound() {
-        when(inventoryRepository.findById(1)).thenReturn(Optional.of(inventory));
-        when(storesRepository.findById(1)).thenReturn(Optional.of(store));
-        when(productsRepository.findById(1)).thenReturn(Optional.empty());
-
-        assertThrows(ProductNotFoundException.class,
-                () -> inventoryService.updateInventory(1, 1, 1, requestDto));
-    }
-
-    // 12 Positive
-    @Test
-    void testDeleteInventory() {
-        when(inventoryRepository.findById(1)).thenReturn(Optional.of(inventory));
-
-        String msg = inventoryService.deleteInventory(1);
-
-        assertEquals("Inventory deleted successfully with id : 1", msg);
-    }
-
-    // 13 Negative
     @Test
     void testDeleteInventoryNotFound() {
         when(inventoryRepository.findById(1)).thenReturn(Optional.empty());
@@ -194,19 +192,38 @@ import org.mockito.junit.jupiter.MockitoExtension;
                 () -> inventoryService.deleteInventory(1));
     }
 
-    // 14 Verify save called
     @Test
-    void testCreateInventorySaveCalled() {
+    void testGetInventoryByStoreNotFound() {
+        when(storesRepository.findById(1)).thenReturn(Optional.empty());
+
+        assertThrows(StoreNotFoundException.class,
+                () -> inventoryService.getInventoryByStore(1));
+    }
+
+    @Test
+    void testGetInventoryByProductNotFound() {
+        when(productsRepository.findById(1)).thenReturn(Optional.empty());
+
+        assertThrows(ProductNotFoundException.class,
+                () -> inventoryService.getInventoryByProduct(1));
+    }
+
+    // =====================================================
+    // 🔍 VERIFY INTERACTIONS
+    // =====================================================
+
+    @Test
+    void testCreateInventoryVerifySave() {
         when(storesRepository.findById(1)).thenReturn(Optional.of(store));
         when(productsRepository.findById(1)).thenReturn(Optional.of(product));
-        when(inventoryRepository.save(any(Inventory.class))).thenReturn(inventory);
+        when(inventoryRepository.findByStoresStoreId(1)).thenReturn(new ArrayList<>());
+        when(inventoryRepository.save(any())).thenReturn(inventory);
 
         inventoryService.createInventory(1, 1, requestDto);
 
-        verify(inventoryRepository, times(1)).save(any(Inventory.class));
+        verify(inventoryRepository, times(1)).save(any());
     }
 
-    // 15 Verify delete called
     @Test
     void testDeleteInventoryVerifyDelete() {
         when(inventoryRepository.findById(1)).thenReturn(Optional.of(inventory));
@@ -216,4 +233,3 @@ import org.mockito.junit.jupiter.MockitoExtension;
         verify(inventoryRepository, times(1)).delete(inventory);
     }
 }
-
